<resources>
    <string name="app_name">OffTrail</string>
    <string name="msg_splash">Carregando...</string>
    <string name="edt_login">Entre com o login</string>
    <string name="edt_senha">Entre com a senha</string>
    <string name="btn_sair">Sair</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_principal">Offtrail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="nome_trilheiro">Nome do trilheiro</string>
    <string name="idade_trilheiro">Idade do trilheiro</string>
    <string name="btn_sobre">Sobre</string>
</resources>
